[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/AudioManager.gd" type="Script" id=1]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="CorrectLetter" type="AudioStreamPlayer" parent="."]

[node name="IncorrectLetter" type="AudioStreamPlayer" parent="."]

[node name="WordComplete" type="AudioStreamPlayer" parent="."]

[node name="DemonDeath" type="AudioStreamPlayer" parent="."]

[node name="DemonSpawn" type="AudioStreamPlayer" parent="."]

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
